--- a/public/sass/demo/_demo-home.scss
+++ b/public/sass/demo/_demo-home.scss
@@ -459,6 +459,17 @@ hr {
         background: #efeeec;
     }
 }
+.bannerimg{
+    width: 100%;
+    height: 470px;
+     object-fit: cover;
+}
+.home_banner3{
+    width: 100%;
+     height: 272px;
+      object-fit: cover;
+}
+
 
 .banner1 {
     .coupon-sale-text {
@@ -694,7 +705,7 @@ hr {
         border: none;
         border-radius: 6px;
         color: #fff;
-        background: #3050ff;
+        background:rgba(227, 6, 19, 1);
 
         i {
             margin-right: 4px;
@@ -1666,6 +1677,7 @@ hr {
         .banner {
             font-size: 1.1rem;
         }
+       
     }
 
     @media(min-width: 576px) {
@@ -1705,6 +1717,15 @@ hr {
 
     .top-notice:not(.top-notice-bg) {
         padding-top: .6em;
+    }
+    .bannerimg{
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        margin-bottom: 20px;
+    }
+    .home_banner3{
+        display: none;
     }
 }
 
