--- a/components/common/header.module.css
+++ b/components/common/header.module.css
@@ -25,3 +25,9 @@
     border-top: 1px solid rgba(240, 240, 240, 1);
     border-bottom: 1px solid rgba(240, 240, 240, 1);
 }
+
+@media only screen and (max-width: 600px){
+    .offerdiv{
+        display: none!important;
+    } 
+}
