--- a/public/sass/demo/_demo-custom.scss
+++ b/public/sass/demo/_demo-custom.scss
@@ -113,8 +113,8 @@ span.toggle {
         margin-right: -1px;
         
         >div {
-            border-right: 1px solid rgba(0,0,0,0.09);
-            border-bottom: 1px solid rgba(0,0,0,0.09);
+            border-right: 1px solid #B9B9B9;
+            border-bottom: 1px solid #B9B9B9;
         }
     }
 }
