--- a/public/sass/components/_skeleton.scss
+++ b/public/sass/components/_skeleton.scss
@@ -406,6 +406,7 @@
         
         .product-default {
             display: block;
+            border: 1px solid rgba(185, 185, 185, 1);
         }
 
         .product-widget {
