--- a/public/sass/demo/_demo-base.scss
+++ b/public/sass/demo/_demo-base.scss
@@ -1285,12 +1285,15 @@ body {
 }
 
 @media (min-width: 1440px) {
-    .container {
-        max-width: 1440px;
-    }
+    // .container {
+    //     max-width: 1440px;
+    // }
 }
 
 @media (max-width: 1500px) {
+    .container{
+        max-width: 1348;
+    }
     .main-nav>.menu:not(.menu-vertical) {
         .menu-item {
             margin-right: 1.2rem;
