--- a/public/sass/pages/_checkout.scss
+++ b/public/sass/pages/_checkout.scss
@@ -333,14 +333,16 @@
 .login-form-container, 
 .checkout-discount {
 	.feature-box {
-		box-shadow: 0 2px 4px 0px rgba(0,0,0,0.05);
+		box-shadow: 3px 4px 18px 0px rgba(0, 0, 0, 0.11);
+
 		margin-bottom: 2.9rem;
 		
 		.feature-box-content {
-			border-top: 4px solid #e7e7e7;
-			border-bottom: 1px solid #e7e7e7;
-			border-left: 1px solid #ececec;
-			border-right: 1px solid #ececec;
+			border: 1px solid #E9E9E9;
+			// border-top: 4px solid #e7e7e7;
+			// border-bottom: 1px solid #e7e7e7;
+			// border-left: 1px solid #ececec;
+			// border-right: 1px solid #ececec;
 			padding: 1rem 2rem;
 		}
 	}
@@ -363,7 +365,7 @@
 			font-family: $font-family;
 
 			&:hover {
-				background-color: $primary-color;
+				background-color: red;
 				color: #fff;
 			}
 		}
@@ -414,7 +416,7 @@
 
 .checkout-discount {
 	.form-control {
-		min-height: 33px;
+		min-height: 60px;
 	}
 
 	.form-control, .input-group-append {
@@ -442,7 +444,8 @@
 		padding-top: 1rem;
 
 		.input-group {
-			max-width: 319px;
+			max-width: 668px;
+			height: 81px;
 		}
 
 		.btn {
@@ -487,12 +490,14 @@
 	.checkout-discount {
 		.form-control {
 			margin-right: 1.4rem;
-			height: 33px;
+			height: 49px;
 			font-size: 1.2rem;
 		}
 
 		.btn.btn-sm {
-			height: 33px;
+			height: 60px;
+			color: white;
+			background-color: black;
 		}
 	}
 
