--- a/public/sass/config/_variables.scss
+++ b/public/sass/config/_variables.scss
@@ -23,12 +23,12 @@ $headings-text: #222529 !default;
 $border-radius: 0 !default;
 
 // Skin / Font Family
-$font-family: 'Open Sans', sans-serif !default;
+$font-family: 'Poppins', sans-serif !default;
 $second-font-family: Poppins, sans-serif !default;
 $third-font-family: Oswald, sans-serif !default;
 
 // Skin / Shop Page Font Family
-$shop-font-family: 'Open Sans', sans-serif !default;
+$shop-font-family: 'Poppins', sans-serif !default;
 $shop-second-font-family: Poppins, sans-serif !default;
 
 // Breakpoints
