--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -53,6 +53,7 @@
 @import 'components/lazy-load';
 @import 'components/skeleton';
 @import 'components/toast';
+@import 'components/affliation';
 
 // Base
 @import 'base/base';
