fix icon in affliation

--- a/public/sass/pages/_cart.scss
+++ b/public/sass/pages/_cart.scss
@@ -246,7 +246,7 @@ i.cart-empty {
 }
 
 .checkout-progress-bar li a.active, .checkout-progress-bar li a:hover {
-	color: $primary-color;
+	color: #E30613;
 	opacity: 1;
 }
 
