--- a/public/sass/components/_affliation.scss
+++ b/public/sass/components/_affliation.scss
@@ -1,276 +1,242 @@
-.input-container{
-    width: 567px;
-    height: 471px;
-    background-color: 
-    #F9F9F9;
-    border-radius: 18px;
+.input-container {
+  width: 567px;
+  height: 471px;
+  background-color: #f9f9f9;
+  border-radius: 18px;
 
+  .icon {
+    width: 131px;
+    height: 131px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    border: 1px solid #d7d7d7;
+  }
 
-    .icon{
-        width: 131px;
-        height: 131px;
-        background-color: #FFFFFF;
-        border-radius: 50%;
-        border: 1px solid   #D7D7D7 ;
-    }
-
-    .header-content{
-        
-            font-family: 'Poppins', sans-serif; 
-            font-weight: 500; 
-            font-size: 26px; 
-            line-height: 52.33px; 
-            letter-spacing: -1px; 
-            text-align: center; 
-            color: black;
-    
-    }
-    .content{
-        font-family: 'Poppins', sans-serif; 
-    font-weight: 400; 
-    font-size: 14px; 
-    line-height: 28px; 
+  .header-content {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 52.33px;
+    letter-spacing: -1px;
     text-align: center;
-    }
-
-   
-
+    color: black;
+  }
+  .content {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 28px;
+    text-align: center;
+  }
 }
 
-
 .uploade {
-    width: 475px;
-    height: 106px;
-    margin-top: 40px;
-    display: flex;
-    flex-direction: column;
-    // align-items: center;
-    font-family: 'Poppins', sans-serif; 
-    font-size: 16px; 
-    font-weight: 400; 
-    line-height: 20px; 
-    letter-spacing: 0px; 
-    color: black ;
-    
+  width: 475px;
+  height: 106px;
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0px;
+  color: black;
 }
 
 .uplode-content {
-    width: 475px;
-    height: 69px;
-    background-color: #F9F9F9;
-    display: flex;
-    align-items: center;
-    // padding: 10px;
-    border-radius: 8px;
-   
+  width: 475px;
+  height: 69px;
+  background-color: #f9f9f9;
+  display: flex;
+  align-items: center;
+  // padding: 10px;
+  border-radius: 8px;
 }
 
 .icon-container {
-    width: 40px;
-    height: 40px;
-    // background-color: #E6E6E6;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    margin-right: 20px;
-
+  width: 40px;
+  height: 40px;
+  // background-color: #E6E6E6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  margin-right: 20px;
 }
 
 .text-container {
-    flex-grow: 1; 
+  flex-grow: 1;
 }
 
 .text-container p {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 20px;
-    color: black;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 20px;
+  color: black;
 }
 
 .fa-times {
-    cursor: pointer;
-    font-size: 18px;
-    color: #777;
-    padding-right: 20px;
-
+  cursor: pointer;
+  font-size: 18px;
+  color: #777;
+  padding-right: 20px;
 }
 
+.form-container {
+  width: 639px;
+  height: 727px;
+  position: absolute;
 
+  border-radius: 18px;
+  background-color: #f9f9f9;
 
-
-.form-container{
-    width: 639px;
-    height: 727px;
-    position: absolute;
-  
-    border-radius: 18px;
-    background-color: 
-    #F9F9F9;
-
-    .form-header{
-        font-family: 'Poppins', sans-serif;
-        font-weight: 500;
-        font-size: 22px;
-        line-height: 52.33px;
-        color: black;
-    }
-    .form-group{
-        font-family: 'Poppins', sans-serif;
+  .form-header {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 52.33px;
+    color: black;
+  }
+  .form-group {
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-size: 22px;
     line-height: 30.33px;
     color: #737373;
-    }
+  }
 
-
-    .styled-button {
-        width: 266px;
-        height: 58px;
-        position: absolute;
-        color: white;
-        padding: 9px 58px 9px 58px;
-        gap: 10px;
-        background-color: black;
-    }
-    
+  .styled-button {
+    width: 266px;
+    height: 58px;
+    position: absolute;
+    color: white;
+    padding: 9px 58px 9px 58px;
+    gap: 10px;
+    background-color: black;
+  }
 }
-    
+
 @media (max-width: 992px) {
-    .input-container {
-        width: 100%;
-        padding: 20px;
-        text-align: center;
-    }   
+  .input-container {
+    width: 100%;
+    padding: 20px;
+    text-align: center;
+  }
 
-    .uploade,
-    .form-container {
-        width: 100%;
-        padding: 20px;
-    }
+  .uploade,
+  .form-container {
+    width: 100%;
+    padding: 20px;
+  }
 }
-
 
 @media (max-width: 768px) {
-    .input-container {
-        padding: 10px;
-    }
+  .input-container {
+    padding: 10px;
+  }
 
-    .uploade,
-    .form-container {
-        padding: 10px;
-    }
+  .uploade,
+  .form-container {
+    padding: 10px;
+  }
 }
-
-
 
 ///dashboard
 .db-container {
-    display: flex;
-    justify-content: between;
-    gap: 5rem;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: between;
+  gap: 5rem;
+  margin-bottom: 20px;
 
-    .card-content{
-        font-family: 'Poppins', sans-serif;
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 52.33px;
-       
+  .card-content {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 52.33px;
 
-
-       .content-with-image {
-            display: flex;
-            justify-content: space-between;
-          }
-          
-
-        
-          
-
+    .content-with-image {
+      display: flex;
+      justify-content: space-between;
     }
-    .card {
-        width: 437px;
-        height: 234px;
+  }
+  .card {
+    width: 437px;
+    height: 234px;
+    border: 1px solid;
+    margin-top: 40px;
+
+    &.gradient-1 {
+      border: 1px solid #e0e0e0;
+      background: linear-gradient(120deg, #fff 39.11%, #e30613 166.11%);
+    }
+
+    &.gradient-2 {
+        border: 1px solid #E0E0E0;
+        background: linear-gradient(120deg, #FFF 39.11%, #BFD351 166.11%);
+    }
+
+    &.gradient-3 {
+        border: 1px solid #E0E0E0;
+        background: linear-gradient(120deg, #FFF 39.11%, #28BAE8 166.11%);
+    }
+
+    /* Nested card content styles */
+    .card-content {
+      padding: 1rem;
+
+      h4 {
+        font-family: "Poppins", sans-serif;
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 20px;
+      }
+
+      p {
+        font-family: "Poppins", sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+      }
+
+      button {
         border: 1px solid;
-        margin-top: 40px;
-
-        
-        &.gradient-1 {
-            border-color: #CDCDCD;
-            background: linear-gradient(to right, rgba(255, 255, 255, 3), rgba(227, 6, 19, 1));
-
-        }
-
-        &.gradient-2 {
-            border-color: #CDCDCD;
-            background: linear-gradient(to right, #FFFFFF, #BFD351);
-        }
-
-        &.gradient-3 {
-            border-color: #CDCDCD;
-            background: linear-gradient(to right, #FFFFFF, #28BAE8);
-        }
-
-        /* Nested card content styles */
-        .card-content {
-            padding: 1rem;
-
-          
-            h4 {
-                font-family: 'Poppins', sans-serif;
-                font-weight: 600;
-                font-size: 24px;
-                line-height: 20px;
-            }
-
-          
-            p {
-                font-family: 'Poppins', sans-serif;
-                font-weight: 400;
-                font-size: 14px;
-                line-height: 20px;
-            }
-
-           
-            button {
-                border: 1px solid;
-                margin-top: 20px;
-                width: 152px;
-                height: 43px;
-                padding: 10px;
-            }
-        }
+        margin-top: 20px;
+        width: 152px;
+        height: 43px;
+        padding: 10px;
+      }
     }
+  }
 }
 
-.content-with-image p{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 52.33px;
-    color: black;
-  }
-  
- 
-  .number{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
-    font-size: 60px;
-    line-height: 20px;
-    color: black;
+.content-with-image p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 52.33px;
+  color: black;
+}
+
+.number {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 20px;
+  color: black;
+}
+
+@media (max-width: 768px) {
+  .db-container {
+    flex-direction: column;
+    gap: 2rem;
   }
 
-  @media (max-width: 768px) {
-    .db-container {
-      flex-direction: column;
-      gap: 2rem; 
-    }
-  
-    .card {
-      width: 100%; 
-      margin-top: 20px; 
-    }
+  .card {
+    width: 100%;
+    margin-top: 20px;
   }
+}
