--- a/public/sass/components/_lazy-load.scss
+++ b/public/sass/components/_lazy-load.scss
@@ -89,3 +89,12 @@
 		}
 	}
 }
+@media (max-width: 768px) {
+	.media-with-lazy{
+		figure {
+			&::before{
+				padding-top: 124%;
+			}
+		}
+	}	
+}
