--- a/public/sass/base/header/_menu.scss
+++ b/public/sass/base/header/_menu.scss
@@ -695,8 +695,14 @@ background: #FFF;
 }
 .customheading{
 	font-size: 14px;
-	font-weight: 500;
-	color: #000;
+    font-weight: 500;
+    color: #000;
+    border-left: 3px solid red;
+    padding-left: 10px;
+    padding-top: 6px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px
 }
 .custom__menusecondchild{
 	display: flex;
@@ -712,7 +718,8 @@ background: #FFF;
 		place-items: center;
 		gap: 4;
 		box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.08);
-
+		min-width: 121px;
+		max-width: 121px;
 		&-label{
 				font-size: 12px;
 				font-weight: 500;
@@ -733,6 +740,8 @@ background: #FFF;
 		place-items: center;
 		gap: 10;
 		box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.08);
+		min-width: 121px;
+    max-width: 121px;
 		&-image {
 			img {
 				margin-right: 10px;
@@ -767,11 +776,15 @@ scrollbar-width: thin;
     scrollbar-color: transparent transparent;
 }
 
-.custom__menufirstchild {
-    flex-wrap: wrap; 
-    justify-content: flex-start; 
+.custom__menufirstchild,.custom__menusecondchild,.custom__menulastchild {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+	&__item{
+min-width: none;
+max-width: none;
+	}
   }
-
+  
   .custom__menufirstchild__item {
     // width: 150px; /* 
     margin-right: 10px; 
