feat:fixgng hover color

--- a/public/sass/demo/_demo-home.scss
+++ b/public/sass/demo/_demo-home.scss
@@ -194,7 +194,8 @@ hr {
     }
 
     [class*='owl-']:not(.disabled):hover {
-        background: #f4f4f4;
+        background: black;
+        color: white;
     }
 
     .owl-next,
