--- a/public/sass/plugins/_input-range.scss
+++ b/public/sass/plugins/_input-range.scss
@@ -6,8 +6,8 @@
         right: -.55rem;
         left: auto;
         top: -0.05em;
-        background: $primary-color;
-        border-color: $primary-color;
+        background: #E30613;
+        border-color: #E30613;
     }
     .input-range__track--active {
         background: #eee;
