--- a/public/sass/plugins/_tree.scss
+++ b/public/sass/plugins/_tree.scss
@@ -24,7 +24,7 @@
 			.rc-tree-node-content-wrapper {
 
 				&:hover {
-					color: $primary-color;
+					color: #E30613;
 				}
 			}
 
@@ -37,7 +37,7 @@
 			background: none;
 			box-shadow: none;
 			opacity: 1;
-			color: $primary-color;
+			color: #E30613;
 		}
 
 		.rc-tree-indent-unit {
