--- a/public/sass/pages/_wishlist.scss
+++ b/public/sass/pages/_wishlist.scss
@@ -209,7 +209,7 @@ i.wishlist-empty {
 	}
 
     .wishlist-table-container {
-		border-top: 4px solid $primary-color;
+		border-top: 4px solid #E30613;
     }
 
 	.table.table-wishlist {
