fix:hovering color

--- a/public/sass/pages/_cart.scss
+++ b/public/sass/pages/_cart.scss
@@ -420,7 +420,7 @@ i.cart-empty {
 
 @include mq(sm, max) {
 	.cart-table-container {
-		border-top: 4px solid $primary-color;
+		border-top: 4px solid  #E30613;
 	}
 
 	.table.table-cart {
