--- a/public/sass/demo/_demo-home.scss
+++ b/public/sass/demo/_demo-home.scss
@@ -10,7 +10,10 @@
 .newsletter-popup-content {
     max-width: 357px;
 }
-
+.electronic-section{
+    padding-top: 80px;
+    padding-bottom: 30px;
+}
 .custom-divide-line,
 .home {
     .product-default figure {
@@ -25,8 +28,9 @@
 }
 
 .product-media,
-.product-image-container,
-.product-default figure {
+.product-image-container
+// .product-default figure
+ {
     border: 1px solid #f4f4f4;
 }
 
@@ -152,6 +156,7 @@ hr {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    height: "354px"!important;
 }
 
 .text-animate {
@@ -168,6 +173,7 @@ hr {
     width: 90%;
     margin: 0 auto;
     background-color: white;
+    padding-bottom: 60px;
 }
 @keyframes slideX {
     0% {
@@ -194,7 +200,8 @@ hr {
     }
 
     [class*='owl-']:not(.disabled):hover {
-        background: #f4f4f4;
+        background: black;
+        color: white;
     }
 
     .owl-next,
@@ -537,6 +544,8 @@ hr {
     margin-bottom: .7rem;
     font-size: 2.2rem;
     font-weight: 600;
+    padding-bottom: 4.7rem;
+    padding-top: 4rem;
 
     i {
         margin-left: 3px;
@@ -544,7 +553,11 @@ hr {
         margin: 2px 8px 0 3px;
     }
 }
-
+.apple-product-head{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .products-with-divide {
     margin-bottom: -1px;
 
@@ -572,6 +585,7 @@ hr {
 
 .deal-products-section {
     padding: 2.6rem 0 4.5rem;
+    padding-top: 5.5rem;
 
     .product-countdown-container {
         bottom: auto;
@@ -728,7 +742,7 @@ hr {
 
 // 2.7) Category Filter Section
 .category-filter-section {
-    padding: 4rem 0 4.8rem;
+    padding: 6rem 0 4.8rem;
 
     > .container > .row {
         overflow: hidden;
@@ -820,6 +834,7 @@ hr {
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 725px;
+    height: 100%;
 
     h4 {
         margin-left: -1.2rem;
@@ -910,7 +925,7 @@ hr {
 
 .banner5,
 .banner4 {
-    padding-top: 150px;
+    padding-top: 324px;
 
     h4 {
         margin-bottom: 8px;
@@ -1503,19 +1518,20 @@ hr {
             margin-left: -21px;
         }
     }
+   
 }
 
 @media(min-width: 992px) {
     .category-filter-section {
         .shop-list {
-            margin-right: -1.5rem;
+            margin-right: -1.1rem;
         }
     }
 
     .category-filter-section{
         .products-with-divide {
             > .row {
-                margin-left: -20px;
+                margin-left: -22px;
             }
         }
     }
@@ -1563,7 +1579,7 @@ hr {
 @media(min-width: 1400px) {
     .category-filter-section {
         .nav {
-            margin-bottom: 7.8rem;
+            margin-bottom: 9rem;
             padding: 3.2rem;
         }
     }
@@ -1701,6 +1717,23 @@ hr {
 }
 
 @media(max-width: 767px) {
+    .categories-container{
+        width: 100%;
+    }
+    // .bg-image{
+    //     height: 0;
+    // }
+    .applesection-container{
+        width: 100%;
+    }
+    .electronic-section{
+        padding-top: 15px;
+        padding-bottom: 1px;
+    }
+    .section-title{
+    margin-bottom: 1.7rem;
+    padding-top: 0 !important;
+    padding-bottom: 0;}
     .heading {        
         .section-title {
             width: calc( 100% - 65px );
@@ -1781,8 +1814,8 @@ hr {
         padding: 2.5rem 2rem;
     }
 
-    .banner5, 
-    .banner4 {
+    .banner5
+    {
         padding-top: 250px;
 
         .content-left {
@@ -1824,7 +1857,7 @@ hr {
     }
 
     .recent-products-section .heading .view-all {
-        top: 3.9rem;
+        top: 0.9rem;
     }
 
     .product-price {
