--- a/public/sass/pages/_blog.scss
+++ b/public/sass/pages/_blog.scss
@@ -621,8 +621,8 @@ figure {
 .widget-title {
 	margin: .5rem 0 1.3rem;
 	color: #313131;
-	font-size: 1.6rem;
-	font-weight: 700;
+	font-size: 14px;
+	font-weight: 600;
 	line-height: 1.2;
 	text-transform: uppercase;
 }
