--- a/components/common/header.module.css
+++ b/components/common/header.module.css
@@ -14,7 +14,7 @@
     background-color: black!important;
 }
 .offerdiv{
-    margin:0 20px
+    margin:0 20px 0 65px
 }
 .navcontainer{
     border: 1px solid rgba(240, 240, 240, 1);
