--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -21,8 +21,8 @@ html {
 body {
 	color: $body-text;
 	@include css( background, body, background );
-	font-size: #{$font-size};
-	font-weight: 400;
+	font-size: #{1.2rem};
+	font-weight: 600;
 	line-height: 1.4;
 	@include css( letter-spacing, body, letter-spacing );
 	font-family: $font-family;
