--- a/public/sass/components/_lazy-load.scss
+++ b/public/sass/components/_lazy-load.scss
@@ -69,7 +69,8 @@
 		&::before{
 			content: "";
 			display: block;
-			padding-top: 88%; //product one component figure
+			// padding-top: 88%; //product one component figure
+			padding-top: 80%;
 			width: 100%;
 			// background-color: #f4f4f4;
 		}
