--- a/public/sass/demo/_demo-base.scss
+++ b/public/sass/demo/_demo-base.scss
@@ -941,6 +941,10 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        height: 86px;
+    border-bottom: 1px solid #EEE;
+    margin-bottom: 28px;
+    padding-top: 28px
     }
 }
 
@@ -1087,7 +1091,7 @@
     }
 }
 .custom-helpline{
-    margin-top: 160px;
+    // margin-top: 160px;
 }
 // 3. Component
 // 3.1) Base
@@ -1123,7 +1127,7 @@ body {
 }
 
 .product-price {
-    color: #444;
+    color: #000;
 }
 
 .widget-featured-products,
