--- a/public/sass/demo/_demo-custom.scss
+++ b/public/sass/demo/_demo-custom.scss
@@ -162,6 +162,7 @@ span.toggle {
 .product-single-details {
     .ratings-container {
         margin-bottom: 2.3rem;
+        margin-top: 2.1rem;
     }
 }
 
