--- a/public/sass/pages/_login.scss
+++ b/public/sass/pages/_login.scss
@@ -3,8 +3,10 @@
 
     .heading .title {
         margin-bottom: 0;
-        font-size: 2.2rem;
+        font-size: 2.6rem;
         letter-spacing: -.01em;
+        font-weight: 600;
+
     }
 
     .custom-checkbox .custom-control-label:after {
@@ -26,13 +28,13 @@
             margin-bottom: 1.7rem;
             padding-top: .8rem;
             padding-bottom: .8rem;
-            border-color: #e7e7e7;
+            border-color: #CDCDCD;
             line-height: 32px;
         }
 
         .btn {
             font-family: $font-family;
-            font-size: 1.6rem;
+            font-size: 1.4rem;
         }
 
         .form-footer {
@@ -64,7 +66,9 @@
         margin-top: 1.3rem;
     }
 }
-
+.left-login-section{
+    margin-top: 110px;
+}
 .reset-password-container {
     padding-top: 3.9rem;
     padding-bottom: 3rem;
