--- a/public/sass/pages/product-pages/_product-page.scss
+++ b/public/sass/pages/product-pages/_product-page.scss
@@ -68,9 +68,10 @@ $product-single-thumbnail-gutter: 3px !default;
 .add-cart {
 	padding: 12px 27px 10px 26px;
 	font-size: 1.4rem;
-	font-weight: 700;
+	font-weight: 600;
 	letter-spacing: -.015em;
 	line-height: 24px;
+	border-radius: 0;
 	@if ($second-font-family != $shop-second-font-family) {
 		font-family: $shop-second-font-family;
 	}
@@ -92,7 +93,7 @@ $product-single-thumbnail-gutter: 3px !default;
     padding: 17px 8px;
 	color: $primary-color-dark;
 	font-size: 1.2rem;
-	font-weight: 700;
+	font-weight: 500;
 	font-family: $shop-second-font-family;
 	letter-spacing: -.015em;
 	text-transform: uppercase;
@@ -946,16 +947,16 @@ main .sticky-header {
 		text-align: center;
 		margin-bottom: 5px;
 		text-transform: uppercase;
-		padding: 7px;
+		padding: 7px 10px;
 		color: #fff;
 		font-weight: 600;
-		font-size: 12px;
-		font-weight: 700;
+		font-size: 10px;
+		font-weight: 600;
 		line-height: 1;
-		border-radius: 12px;
-
+		// border-radius: 12px;
+		font-family: Plus Jakarta sans-serif;
 		&.label-hot {
-			background-color: #2ba968;
+			background-color: #44961D;
 		}
 
 		&.label-sale {
