--- a/public/sass/pages/_cart.scss
+++ b/public/sass/pages/_cart.scss
@@ -61,7 +61,8 @@
 		margin-bottom: 0;
 		padding: 0;
 		font-family: $font-family;
-		font-weight: 400;
+		font-weight: 600;
+		font-size: 12px;
 		line-height: 1.75;
 
 		&:hover {
