--- a/public/sass/pages/product-pages/_product-page.scss
+++ b/public/sass/pages/product-pages/_product-page.scss
@@ -232,7 +232,7 @@ $product-single-thumbnail-gutter: 3px !default;
         display: flex;
 		top: 4px;
 		right: 10px;
-
+gap: 10px;
 		&.top-0 {
 			top: 0;
 		}
@@ -281,6 +281,7 @@ $product-single-thumbnail-gutter: 3px !default;
         .product-prev .product-link::before {
 			content: '\e819';
 			display: block;
+			font-weight: 500;
 		}
 		
         .product-next .product-link::before {
@@ -467,7 +468,7 @@ $product-single-thumbnail-gutter: 3px !default;
 	}
 
 	.product-desc {
-		margin-bottom: 1.8rem;
+		margin-bottom: 4.8rem;
 		font-size: 1.6rem;
 		letter-spacing: -.015em;
 		line-height: 1.6875;
@@ -498,8 +499,8 @@ $product-single-thumbnail-gutter: 3px !default;
 
 		.form-control {
 			height: 48px;
-			font-size: 1.6rem;
-			font-weight: 700;
+			font-size: 1.4rem;
+			font-weight: 600;
 		}
 	}
 
@@ -981,7 +982,7 @@ main .sticky-header {
 .prod-thumbnail {
 	display: flex;
 	display: -ms-flexbox;
-	margin: 8px 0 0;
+	margin: 59px 0 0;
 	padding: 0 1px;
 
 	> .owl-dot {
