--- a/public/sass/pages/_cart.scss
+++ b/public/sass/pages/_cart.scss
@@ -87,7 +87,7 @@
 
 	.subtotal-price {
 		color: #222529;
-		font-size: 1.6rem;
+		font-size: 1.2rem;
 		font-weight: 600;
 	}
 
@@ -228,9 +228,9 @@ i.cart-empty {
 		max-width: 420px;
 	}
 
-	.input-group-append {
-		margin-left: 3px;
-	}
+	// .input-group-append {
+	// 	margin-left: 3px;
+	// }
 }
 
 .cart-summary {
@@ -238,11 +238,13 @@ i.cart-empty {
     padding: 2.4rem 3rem 3.4rem;
 	border: 2px solid #e7e7e7;
 	background: #fff;
+	margin-left: 45px;
 
 	h3 {
 		margin-bottom: 2.3rem;
 		font-size: 1.6rem;
 		letter-spacing: -.01em;
+		font-weight: 600;
 	}
 }
 
@@ -311,19 +313,19 @@ i.cart-empty {
 		border-top: 1px solid #ccc;
 		color: $headings-text;
 		font-size: 1.6rem;
-		font-weight: 700;
+		font-weight: 600;
 
 		tr td {
 			padding-top: 1.3rem;
 			padding-bottom: 1.6rem;
 			vertical-align: middle;
-			font-size: 1.6rem;
+			font-size: 1.4rem;
 			padding-left: 1.2rem;
 		}
 
 		tr td:last-child {
-			font-weight: 700;
-			font-size: 22px;
+			font-weight: 600;
+			font-size: 18px;
 			color: #222529;
 		}
 		
